--- a/styling/css/style.css
+++ b/styling/css/style.css
@@ -60,7 +60,7 @@ body {
 .header {
     width: 100vw;
     height: 100px;
-    background-color: green;
+    background-color: #403e5b;
     margin-left: -9px;
     margin-top: -10px;
 }
@@ -110,4 +110,19 @@ body {
     background-color: white;
     height: 550px;
     width: 3px;
+}
+
+.postButton {
+    display: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    background: linear-gradient(to right, #00b7ff, #ffffc7);
+    border-radius: 40px;
+    color: #272638;
+    height: 50px;
+    width: 200px;
+    outline: white;
+    font-family: myFirstFont;
+    font-size: 20px;
 }
