Renamed styling folder to static and updated html

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
         <title>Aardvark Answers</title>
         <meta name="Home" content="3155 Project">
 		<meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="styling/css/style.css">
+        <link rel="stylesheet" type="text/css" href="static/css/style.css">
     </head>
     <body>
-        <img src="./styling/Images/LogoText.png" alt="Aardvark Answers Logo" class="Indexlogo">
+        <img src="./static/Images/LogoText.png" alt="Aardvark Answers Logo" class="Indexlogo">
         <form method="GET" action="./users/login.html">
             <button class="buttons">Login</button>
         </form>
