--- a/templates/questions.html
+++ b/templates/questions.html
@@ -4,12 +4,12 @@
         <title>Aardvark Answers</title>
         <meta name="Home" content="3155 Project">
 		<meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../styling/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     </head>
     <body>
         <div class="header">
             <a href="questions.html">
-                <img src="../styling/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
+                <img src="../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
             </a>
             <div class="navLinks">
                 <a href="questions.html">
