--- a/templates/register.html
+++ b/templates/register.html
@@ -4,11 +4,11 @@
         <title>Aardvark Answers</title>
         <meta name="Home" content="3155 Project">
 		<meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../styling/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/style.css">
     </head>
     <body>
         <div class="header">
-            <img src="../styling/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
+            <img src="../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
             <div class="welcomeHeader">
                 <h1>Welcome to Aardvark Answers</h1>
                 <!-- Once we get acounts functional we need to add a logout button -->
