Added button functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,12 @@
     </head>
     <body>
         <img src="./static/Images/LogoText.png" alt="Aardvark Answers Logo" class="Indexlogo">
-        <form method="GET" action="./users/login.html">
+
+        <form method="GET" action="./login">
             <button class="buttons">Login</button>
         </form>
-        <form method="GET" action="./users/register.html">
+
+        <form method="GET" action="./register">
             <button class="buttons">Register</button>
         </form>
     </body>
