--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,24 +4,24 @@
         <title>Aardvark Answers</title>
         <meta name="Home" content="3155 Project">
 		<meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../styling/css/style.css">
+        <link rel="stylesheet" type="text/css" href="static/css/style.css">
     </head>
     <body class="profileBody">
         <div class="header">
-            <a href="../questions/questions.html">
-                <img src="../styling/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
+            <a href="{{ url_for('questions') }}">
+                <img src="../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
             </a>
             <div class="navLinks">
-                <a href="../questions/questions.html">
+                <a href="{{ url_for('questions') }}">
                     <h2 class="nav">Home</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a>
                     <h2 class="nav">Reviews</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="profile.html">
+                <a href="{{ url_for('profile') }}">
                     <h2 class="navCurrent">My Account</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="../index.html">
+                <a href="{{ url_for('index') }}">
                     <h2 class="nav">Logout</h2>
                 </a>
             </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="leftSide">
             <h1>Account Overview</h1>
-            <img src="../styling/Images/profilePic.jpg" class="profilePic" alt="Profile Picture">
+            <img src="../static/Images/profilePic.jpg" class="profilePic" alt="Profile Picture">
             <button class="uploadPic">Upload Photo</button>
             <h2>Email:</h2>
             <input value="Enter your email" class="login">
