Debugging and adding functionality to post question button

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -26,7 +26,9 @@
                 </a>
             </div>
         </div>
-        <button class="postButton">Post a Question</button>
+        <form method="GET" action="./new_question">
+            <button class="postButton">Post a Question</button>
+        </form>
         <div class="questions">
             <h3 class="searchText">Search questions, topics, and accounts</h3>
             <form>
