--- a/templates/questions.html
+++ b/templates/questions.html
@@ -39,7 +39,7 @@
 <!-- We will need to add a conditional here to display "There are no posts" when empty. -->
                 <h3 class="postedText">Recently Posted</h3>
                 <table>
-                    {% for question in questions %}
+                    {% for question in question %}
                     <tr>
                         <td>{{ question.header }}</td>
                         <td>{{ question.body }}</td>
