--- a/templates/questions.html
+++ b/templates/questions.html
@@ -39,11 +39,11 @@
 <!-- We will need to add a conditional here to display "There are no posts" when empty. -->
                 <h3 class="postedText">Recently Posted</h3>
                 <table>
-                    {% for question in questions %}
+                    {% for question in question %}
                     <tr>
-                        <td>{{ question.header }}</td>
-                        <td>{{ question.body }}</td>
-                        <td>{{ question.topics }}</td>
+                        <h3 class="postedText"><td>{{ question.header }}</td></h3>
+                        <h3 class="postedText"><td>{{ question.body }}</td></h3>
+                        <h3 class="postedText"><td>{{ question.topics }}</td></h3>
                         <td><a href="{{ url_for('update_question', question_id=question.id) }}">Edit</a></td>
                     </tr>
                     {% endfor %}
