--- a/templates/questions.html
+++ b/templates/questions.html
@@ -48,6 +48,11 @@
                         <h3 class="postedText"><td>{{ question.body }}</td></h3>
                         <h3 class="postedText"><td>{{ question.topics }}</td></h3>
                         <td><a href="{{ url_for('update_question', question_id=question.id) }}">Edit</a></td>
+                        <td>
+                            <form action="{{ url_for('delete_question', question_id=question.id) }}" method="post">
+                                <input type="submit" value="Delete">
+                            </form>
+                        </td>
                     </tr>
                     {% endfor %}
                 </table>
