Added login, register, logout, comment features from flask assignments. Started implementing like feature.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -245,3 +245,19 @@ body {
     font-family: fontBold;
     font-size: 20px;
 }
+
+table {
+    table-layout: fixed;
+}
+
+th,
+td {
+    width: 15%;
+    overflow: hidden;
+}
+
+.leftText {
+    color: white;
+    text-align: left;
+    font-family: fontLight;
+}
