Formatting on main Questions Page

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         </div>
         <div class="loginPage">
             <h2>Please login with your Email and Password:</h2>
-            <form method="GET" action="../users/profile.html">
+            <form method="GET" action="/profile">
                 <table class="centered">
                     <tr>
                         <td><label class="required">Email:</label></td>
