--- a/templates/questions.html
+++ b/templates/questions.html
@@ -44,12 +44,12 @@
                 <table class="centered">
                     {% for question in questions %}
                     <tr>
-                        <td>{{ question.topics }}</td>
-                        <td><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}</a></td>
-                        <td><a href="{{ url_for('update_question', question_id=question.id) }}">Edit</a></td>
+                        <td class="topic">{{ question.topics }}</td>
+                        <td class="title"><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}</a></td>
+                        <td class="edit"><a href="{{ url_for('update_question', question_id=question.id) }}">Edit</a></td>
                         <td>
                             <form action="{{ url_for('delete_question', question_id=question.id) }}" method="post">
-                                <input type="submit" value="Delete">
+                                <button type="submit" class="delete">Delete</button>
                             </form>
                         </td>
                     </tr>
