--- a/static/css/style.css
+++ b/static/css/style.css
@@ -211,7 +211,8 @@ body {
 }
 
 .centered {
-    margin-left: auto;
+    position: relative;
+    margin-left: 25%;
     margin-right: auto;
 }
 
@@ -244,4 +245,38 @@ body {
     outline: white;
     font-family: fontBold;
     font-size: 20px;
+}
+
+.topic {
+    position: relative;
+    font-family: fontLight;
+    font-size: 25px;
+}
+
+.title {
+    position: relative;
+    font-family: fontLight;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+}
+
+.edit {
+    font-family: fontLight;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+}
+
+.delete {
+    display: relative;
+    background: linear-gradient(to right, #00b7ff, #ffffc7);
+    border-radius: 40px;
+    color: #272638;
+    height: 25px;
+    width: 100px;
+    outline: white;
+    font-family: fontBold;
+    font-size: 15px;
+    margin-left: 10%;
 }
