--- a/templates/view_question.html
+++ b/templates/view_question.html
@@ -27,11 +27,11 @@
             </div>
         </div>
         <div class="questions">
-            <h1 class="postedText">Question</h1>
+            <h1 class="postedText">Title</h1>
             <p>{{ question.header }}></p>
             <h3 class="postedText">Topics</h3>
             <p>{{ question.topics }}</p>
-            <h3 class="postedText">Description</h3>
+            <h3 class="postedText">Question</h3>
             <p>{{ question.body }}</p>
         </div>
     </body>
