--- a/static/css/style.css
+++ b/static/css/style.css
@@ -250,13 +250,13 @@ body {
 .topic {
     position: relative;
     font-family: fontLight;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .title {
     position: relative;
-    font-family: fontLight;
-    font-size: 20px;
+    font-family: fontBold;
+    font-size: 25px;
     color: white;
     text-decoration: none;
 }
@@ -279,4 +279,18 @@ body {
     font-family: fontBold;
     font-size: 15px;
     margin-left: 10%;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.divider {
+    position: relative;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 1px;
 }
